--- a/Terminos.html
+++ b/Terminos.html
@@ -2,25 +2,43 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Términos y Condiciones</title>
+  <title>Términos y Condiciones - Qubits</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px 40px; line-height: 1.6; }
+    h1 { text-align: center; color: #333; }
+    ol { margin-left: 0; padding-left: 20px; }
+    li { margin-bottom: 15px; }
+    .footer-link { text-align: center; margin-top: 30px; }
+  </style>
 </head>
 <body>
-  <h1>Términos y Condiciones</h1>
-  <p>Términos del Servicio del Asistente de Citas Qubits
-Al interactuar con el asistente de citas de Qubits, usted acepta los siguientes términos:
-1. Propósito del Servicio: Este asistente automatiza el proceso de agendar, modificar y cancelar citas en el consultorio odontológico Qubits.
-Es una herramienta de conveniencia y no un sustituto de la comunicación directa con nuestro personal.
-2. Precisión de la Información: Usted es responsable de proporcionar información precisa y verídica (nombre, teléfono y correo electrónico) para la correcta gestión de su cita.
-Qubits no se hace responsable por citas agendadas incorrectamente debido a datos erróneos proporcionados por el usuario.
-3. Limitación de Responsabilidad: El servicio se ofrece "tal cual es".
-El consultorio Qubits no garantiza que el servicio esté libre de errores, interrupciones o fallos.
-4. Uso Adecuado: El asistente está diseñado exclusivamente para la gestión de citas y la obtención de información relacionada con los servicios del consultorio.
-El uso del asistente con fines maliciosos o inapropiados está prohibido.
-5. No es un sustituto de la atención médica: Las interacciones con el asistente virtual no constituyen ni reemplazan la asesoría o el tratamiento médico profesional.
-Para cualquier emergencia o consulta específica, debe contactar directamente al consultorio.
-Al usar este servicio, usted reconoce que ha leído y aceptado estos Términos del Servicio.
-</p>
-  <p><a href="Index.html">⬅️ Volver al inicio</a></p>
-  
-  </body>
+  <h1>Términos y Condiciones del Servicio</h1>
+  <p>
+    El **Asistente de Citas Qubits** es una herramienta de conveniencia para agendar, modificar y cancelar citas en el consultorio odontológico. Al interactuar con el asistente, usted acepta los siguientes términos:
+  </p>
+
+  <ol>
+    <li>
+      **Propósito del Servicio:** Este asistente automatiza el proceso de agendar, modificar y cancelar citas. No es un sustituto de la comunicación directa con nuestro personal.
+    </li>
+    <li>
+      **Precisión de la Información:** Usted es responsable de proporcionar información precisa y verídica (nombre, teléfono y correo electrónico) para la correcta gestión de su cita. Qubits no se hace responsable por citas agendadas incorrectamente debido a datos erróneos proporcionados por el usuario.
+    </li>
+    <li>
+      **Limitación de Responsabilidad:** El servicio se ofrece "tal cual es". El consultorio Qubits no garantiza que el servicio esté libre de errores, interrupciones o fallos.
+    </li>
+    <li>
+      **Uso Adecuado:** El asistente está diseñado exclusivamente para la gestión de citas y la obtención de información relacionada con los servicios del consultorio. El uso del asistente con fines maliciosos o inapropiados está prohibido.
+    </li>
+    <li>
+      **No es un sustituto de la atención médica:** Las interacciones con el asistente virtual no constituyen ni reemplazan la asesoría o el tratamiento médico profesional. Para cualquier emergencia o consulta específica, debe contactar directamente al consultorio.
+    </li>
+  </ol>
+
+  <p>Al usar este servicio, usted reconoce que ha leído y aceptado estos Términos del Servicio.</p>
+
+  <div class="footer-link">
+    <p><a href="Index.html">⬅️ Volver al inicio</a></p>
+  </div>
+</body>
 </html>
