--- a/Privacidad.html
+++ b/Privacidad.html
@@ -2,29 +2,62 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Política de Privacidad</title>
+  <title>Política de Privacidad - Qubits</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px 40px; line-height: 1.6; }
+    h1 { text-align: center; color: #333; }
+    ol, ul { margin-left: 0; padding-left: 20px; }
+    li { margin-bottom: 15px; }
+    strong { color: #0066cc; }
+    .footer-link { text-align: center; margin-top: 30px; }
+  </style>
 </head>
 <body>
   <h1>Política de Privacidad</h1>
-  <p>Política de Privacidad del Asistente de Citas Qubits
-1. Información que Recopilamos
-Este asistente de automatización recopila y utiliza la siguiente información para gestionar sus citas:
-Nombre y Apellido
-Número de teléfono
-Correo electrónico
-Motivo de la cita (ej: limpieza, revisión, consulta de emergencia)
-2. Cómo Utilizamos la Información
-La información recopilada se utiliza exclusivamente para:
-Agendar, modificar y cancelar citas en el calendario de Google Calendar del Consultorio Odontológico Qubits.
-Enviar recordatorios y confirmaciones de citas.
-No compartimos, vendemos ni alquilamos su información personal a terceros. La información se maneja con la máxima confidencialidad y solo es accesible por el personal autorizado del consultorio.
-3. Acceso al Calendario de Google
-Para funcionar, este asistente requiere acceso para leer, crear y modificar eventos en el calendario de Google Calendar. Este acceso se usa únicamente para gestionar las citas que usted solicita.
-4. Consentimiento
-Al interactuar con este asistente y proporcionarnos su información para agendar una cita, usted otorga su consentimiento para el uso de sus datos personales bajo los términos de esta política de privacidad.
-5. Contacto
-Si tiene preguntas sobre esta política de privacidad, puede contactarnos en: javier.perez.arg@gmail.com
-</p>
-  <p><a href="Index.html">⬅️ Volver al inicio</a></p>
-  </body>
+  <p>
+    Esta política describe cómo el Asistente de Citas Qubits recopila, utiliza y protege su información personal.
+  </p>
+
+  <ol>
+    <li>
+      **Información que Recopilamos**
+      <p>Este asistente de automatización recopila y utiliza la siguiente información para gestionar sus citas:</p>
+      <ul>
+        <li>Nombre y Apellido</li>
+        <li>Número de teléfono</li>
+        <li>Correo electrónico</li>
+        <li>Motivo de la cita (ej: limpieza, revisión, consulta de emergencia)</li>
+      </ul>
+    </li>
+
+    <li>
+      **Cómo Utilizamos la Información**
+      <p>La información recopilada se utiliza exclusivamente para:</p>
+      <ul>
+        <li>Agendar, modificar y cancelar citas en el calendario de Google Calendar del Consultorio Odontológico Qubits.</li>
+        <li>Enviar recordatorios y confirmaciones de citas.</li>
+      </ul>
+      <p>No compartimos, vendemos ni alquilamos su información personal a terceros. La información se maneja con la máxima confidencialidad y solo es accesible por el personal autorizado del consultorio.</p>
+    </li>
+
+    <li>
+      **Acceso al Calendario de Google**
+      <p>Para funcionar, este asistente requiere acceso para leer, crear y modificar eventos en el calendario de Google Calendar. Este acceso se usa únicamente para gestionar las citas que usted solicita.</p>
+    </li>
+
+    <li>
+      **Consentimiento**
+      <p>Al interactuar con este asistente y proporcionarnos su información para agendar una cita, usted otorga su consentimiento para el uso de sus datos personales bajo los términos de esta política de privacidad.</p>
+    </li>
+
+    <li>
+      **Contacto**
+      <p>Si tiene preguntas sobre esta política de privacidad, puede contactarnos en: **javier.perez.arg@gmail.com**</p>
+    </li>
+  </ol>
+
+  <div class="footer-link">
+    <p><a href="Index.html">⬅️ Volver al inicio</a></p>
+  </div>
+</body>
 </html>
